_sass/_base.scss
/* ... */
// highlight-search-term
::highlight(search) {
  background-color: var(--global-theme-color);
  color: var(--global-text-color);
}

figure.cover {
  display: inline-block;
  text-align: center;
  margin: 0.5rem; /* adjust as needed */

  img {
    vertical-align: bottom;
  }

  figcaption.abandoned {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #ee5f5b;
  }

  figcaption.finished,
  figcaption.watched {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #62c462;
  }

  figcaption.interested {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #7691db;
  }

  figcaption.paused {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #bdac7e;
  }

  figcaption.queued {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #9e76b5;
  }

  figcaption.reading,
  figcaption.watching {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #f89406;
  }

  figcaption.reread,
  figcaption.rewatch {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #a6517d;
  }

  figcaption.uncategorized {
    font-family: monospace;
    color: #23212d;
    text-transform: uppercase;
    background-color: #b0abb3;
  }

  /* mouse over link */
  a.cover-link:hover {
    color: #23212d !important;
  }
}

